--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -226,7 +226,7 @@ img{
   justify-content: center;
   align-items: center;
   padding: .3rem;
-  background: rgba(6,156,84,.5);
+  background: hwb(283 5% 12% / 0.397);
   border-radius: .4rem;
   z-index: var(--z-tooltip);
   transition: .4s;
